Fix sidebar height on smaller screens

--- a/decidim-proposals/app/packs/stylesheets/decidim/proposals/_proposals.scss
+++ b/decidim-proposals/app/packs/stylesheets/decidim/proposals/_proposals.scss
@@ -161,6 +161,7 @@
       width: 100%;
       padding: 0;
       overflow: auto;
+      height: auto;
       display: none;
     }
   }
@@ -173,6 +174,8 @@
       display: none;
       &__sidebar {
         display: block;
+        overflow: auto;
+        height: auto;
       }
       &__back-button {
         display: block;
